@@ -6,6 +6,7 @@
 - Fix graphics sprite composition.
 - Fix Train weight Action 0 properties (low and high bytes).
 - Fix compilation of generic var parameter in Action 2.
+- Fix `var(...)` call in `Switch` code not accepting `param` value without parentheses.
 
 - Use `AlternativeSprites` instead of sprite tuples.
 - Add Action0 properties for road types.
